Sort transitions and generate with correct ordering

--- a/test.ini
+++ b/test.ini
@@ -3,4 +3,6 @@ state = b
 state = c
 transition = a,b,event1,callback1
 transition = a ,  c,event2    ,callback2
+transition = b ,  c,event1    ,callback1
+transition = c ,  a,event1    ,callback2
 
