--- a/test.ini
+++ b/test.ini
@@ -1,8 +1,24 @@
-state = a
-state = b
-state = c
-transition = a,b,event1,callback1
-transition = a ,  c,event2    ,callback2
-transition = b ,  c,event1    ,callback1
-transition = c ,  a,event1    ,callback2
+# Options for the generator.
+machine_name = machine
+declare_states = true
+declare_events = true
+states_enum_name = state_t
+events_enum_name = event_t
+
+# Declare some states (vertices).
+state = A
+state = B
+state = C
+state = D
+
+# Special properties of the graph (TODO).
+#start = A
+#end = D
+
+# Declare some transitions (edges).
+transition = A, B, tell_A_to_go_B, go_from_A_to_B
+transition = A, C, tell_A_to_go_C, go_from_A_to_C
+transition = B, C, tell_B_to_go_C, go_from_B_to_C
+transition = B, D, tell_to_go_D, go_from_B_to_D
+transition = C, D, tell_to_go_D, go_from_C_to_D
 
